@@ -1,6 +1,7 @@
 """Component Binding Services"""
 
 from interfaces import *
+from attributes import *
 from once import *
 from components import *
 
